--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   <tbody>
   <tr>
     <td width="442" height="91" align="left">
-      <p class="WordSection1">1. Five papers accepted to ICML 2025! Two papers accepted to IEEE TPAMI! I am elected to ICML Board of Directors (term 2025-2028)! </p></td>
+      <p class="WordSection1">1. Five papers accepted to ICML 2025! Two papers accepted to IEEE TPAMI! I am invited to Area Chair of AAAI 2026! I am elected to <strong>ICML Board of Directors</strong> (term 2025-2028)! </p></td>
     <td width="180" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="181" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="172" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -1202,14 +1202,17 @@ No. 1, pp. 119-127, 1998.</span>
  </span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">185. 20 paper submitted to NeurIPS 2025. Extra 2 for the Datasets and Benchmarks Track. </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">184. Bing Yu, Ke Sun, He Wang, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*, and Zhanxing Zhu*, On Leveraging Unlabeled Data for Concurrent Positive-Unlabeled Classification and Robust, ICIG 2025. [<a href="Publications/2025-ICIG-PULearning.pdf">pdf</a>] </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">188. 8 papers submitted to AAAI 2026 and 1 paper submitted to KDD 2026. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">187. 20 paper submitted to NeurIPS 2025. Extra 2 for the Datasets and Benchmarks Track. </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">186. Chenheng Zhang, Tianqi Du, Jizhe Zhang, Mingqing Xiao, Yifei Wang, Yisen Wang, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*</span>, <em>Language System: A Lightweight Ranking Framework for Language Models</em>, ICML 2025 3rd Workshop on Efficient Systems for Foundation Models (ES-FoMo III). [<a href="Publications/2025-ICMLW-Language.pdf">pdf</a>] </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">185. Lexiang Hu, Yikang Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*</span>, <em>Governing Equation Discovery from Data Based on Differential Invariants</em>, ICML 2025 2nd AI for Math Workshop. [<a href="Publications/2025-ICMLW-Governing.pdf">pdf</a>] </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">184. Bing Yu, Ke Sun, He Wang, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*, and Zhanxing Zhu*, <em>On Leveraging Unlabeled Data for Concurrent Positive-Unlabeled Classification and Robust</em>, ICIG 2025. [<a href="Publications/2025-ICIG-PULearning.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">183. Hao Wang, Zhichao Chen, Zhaoran Liu, Xu Chen, Haoxuan Li*, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span></span>, <em>Proximity Matters: Local Proximity Enhanced Balancing for Treatment Effect Estimation</em>, KDD 2025. [<a href="Publications/2025-KDD-Proximity.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">182. Hao Wang, Zhichao Chen, Haotian Wang, Yanchao Tan, Licheng Pan, Tianqiao Liu, Xu Chen, Haoxuan Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Unbiased Recommender Learning from Implicit Feedback via Progressive Proximal Transport</em>, ICML 2025. [<a href="Publications/2025-ICML-Unbiased.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">181. Yang Chen, Long Yang, Yitao Liang, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Low-Dimension-to-High-Dimension Generalization and Its Implications for Length Generalization</em>, ICML 2025. [<a href="Publications/2025-ICML-Length.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">180. Lexiang Hu, Yisen Wang, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Incorporating Arbitrary Matrix Group Equivariance into KANs</em>, ICML 2025. [<a href="Publications/2025-ICML-EKAN.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">179. Lexiang Hu, Yikang Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Explicit Discovery of Nonlinear Symmetries from Dynamic Data</em>, ICML 2025. [<a href="Publications/2025-ICML-LieNLSD.pdf">pdf</a>] </p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">178. Zhiheng Zhang, Haoxiang Wang, Haoxuan Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Active Treatment Effect Estimation via Limited Samples</em>, ICML 2025. [<a href="Publications/2025-ICML-Active.pdf">pdf</a>] </p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">178. Zhiheng Zhang, Haoxiang Wang, Haoxuan Li*, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span></span>, <em>Active Treatment Effect Estimation via Limited Samples</em>, ICML 2025. [<a href="Publications/2025-ICML-Active.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">177. Fengxiang Cheng, Haoxuan Li, Fenrong Liu, Robert van Rooij, Kun Zhang and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u>*</span>, <em>Empowering LLMs with Logical Reasoning: A Comprehensive Survey</em>, IJCAI 2025, survey track. [<a href="Publications/2025-IJCAI-Survey.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">176. Yong Chen, Yuxiang Zhou, Hailiang Dong, Rui Liu, <u>Zhouchen Lin</u>* and Dell Zhang*, <em>AV-NAS: Audio-Visual Multi-Level Semantic Neural Architecture Search for Video Hashing</em>, SIGIR 2025. [<a href="Publications/2025-SIGIR-AV-NAS.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">175. Haotong Yang, Qingyuan Zheng, Yunjian Gao, Yongkun Yang, Yangbo He, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>, and Muhan Zhang, <em>VACT: A Video Automatic Causal Testing System and a Benchmark</em>, ICLR 2025 Workshop on Spurious Correlation and Shortcut Learning: Foundations and Solutions. [<a href="Publications/2025-ICLRW-VACT.pdf">pdf</a>]</p>
@@ -2008,54 +2011,55 @@ granted)</p>
   Activities:   
   <o:p></o:p>
 </span></u></b></p>
-<p>1. Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), grade 
-2023. </p>
-<p>2. Fellow of China Society of Image and Graphics (CSIG), grade 
+<p>1. ICML Board of Directors (2025-2028). </p>
+<p>2. Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), grade 
+  2023. </p>
+<p>3. Fellow of China Society of Image and Graphics (CSIG), grade 
 2021. </p>
-<p>3. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
+<p>4. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
   2018. </p>
-<p>4. Fellow of 
+<p>5. Fellow of 
 International Association of Pattern Recognition (IAPR), grade 2017. </p>
-<p>5. Advisory editor of Advances in Computer Vision and Pattern Recognition. </p>
-<p>6. Associate  Editor of IEEE Trans. Pattern Analysis and Machine Intelligence (2014-2019).</p>
-<p><span lang="EN-US">7. 
+<p>6. Advisory editor of Advances in Computer Vision and Pattern Recognition. </p>
+<p>7. Associate  Editor of IEEE Trans. Pattern Analysis and Machine Intelligence (2014-2019).</p>
+<p><span lang="EN-US">8. 
 </span>Associate  Editor of International Journal of Computer Vision (2012-).</p>
-<p>8. Associate Editor of Optimization Methods and Software (2020-).</p>
-<p>9. Associate Editor of 自动化学报（2024-）.</p>
-<p>10. Executive Editor of Big Data and Information Analytics (2016-).</p>
-<p>11. Associate  
+<p>9. Associate Editor of Optimization Methods and Software (2020-).</p>
+<p>10. Associate Editor of 自动化学报（2024-）.</p>
+<p>11. Executive Editor of Big Data and Information Analytics (2016-).</p>
+<p>12. Associate  
 Editor of Neurocomputing (2012-2014).     
     <o:p></o:p></p>
-<p>12. Chairman 
+<p>13. Ex-Chairman 
 of Machine Vision Professional Committee, China Society of Images and 
 Graphics (evaluated &quot;excellent&quot; in 2018, 2019,  2021,  2022, and 2023).</p>
-<p>13. 
+<p>14. 
 Vice-Chairman of Pattern Recognition and Machine Intelligence Professional 
 Committee, China Association of Automation.</p>
-<p>14. Standing 
-Member of Computer Vision Professional Committee, China Computer Federation.</p>
 <p>15. Standing 
+Member of Computer Vision Professional Committee, China Computer Federation.</p>
+<p>16. Standing 
 Member of Pattern Recognition Professional Committee, China Association of Artificial Intelligence. </p>
-<p><span lang="EN-US">16. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
-<p>17. Chair Professor of Fuzhou University (2025-). </p>
-<p>18. Adjunct 
+<p><span lang="EN-US">17. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
+<p>18. Chair Professor of Fuzhou University (2025-). </p>
+<p>19. Adjunct 
   Professor of Chinese University of Hong Kong (Shenzhen).</p>
-<p>19. Ex-Chair  
+<p>20. Ex-Chair  
   Professor of Northeast Normal University.     
     <o:p></o:p> </p>
-<p>20. Ex-Guest
+<p>21. Ex-Guest
  Professor of Shanghai Jiaotong University.   
     <o:p></o:p></p>
-<p>21. Ex-Guest
+<p>22. Ex-Guest
  Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
     <o:p></o:p></p>
-<p>22. Ex-Guest
+<p>23. Ex-Guest
  Professor of Southeast University.   
     <o:p></o:p></p>
-<p>23. Ex-Guest
+<p>24. Ex-Guest
  Professor and Ph.D. Supervisor of Beijing Jiaotong University.   
     <o:p></o:p></p>
-<p>24. Reviewer/Editor 
+<p>25. Reviewer/Editor 
   to Journals:    
     <o:p></o:p>
 </p>
@@ -2074,7 +2078,7 @@ Member of Pattern Recognition Professional Committee, China Association of Artif
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p>25. 
+<p>26. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></p>
 <p>NeurIPS 
@@ -2120,7 +2124,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Recognition 2004, Eurographics 2002, Asian Conf. Computer Vision 2002, Int’l
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></p>
-<p>26. 
+<p>27. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Awards:</u></b></strong></p>
@@ -2430,7 +2434,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on July 22, 2025. Number of visitors since March 1, 2010:     
+was last updated on Aug. 5, 2025. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
