--- a/index.html
+++ b/index.html
@@ -2081,7 +2081,7 @@ Member of Pattern Recognition Professional Committee, China Association of Artif
 <p>26. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></p>
-<p>NeurIPS 
+<p>AAAI 2026 (<strong>Area Chair</strong>), NeurIPS 
 2025 (<strong>Senior Area Chair</strong>), ICIG 2025 (<strong>Program Co-Chair</strong>), AAAI 2025 Workshop on Artificial Intelligence with Causal Techniques (<strong>Chair</strong>), ICCV 2025 (<strong>Senior Area Chair</strong>), CVPR 2025 (<strong><strong>Senior </strong>Area Chair</strong>), ICML 2025 (<strong>Senior Area Chair</strong>), ICLR 2025 (<strong>Area Chair</strong>), SigAI China Forum at TURC 2024 (<strong>General Chair</strong>), NeurIPS 
 2024 (<strong>Senior Area Chair</strong>), ICML 2024 (<strong>Senior Area Chair</strong>), PRCV 2024 
 (<strong>Program Co-Chair</strong>), ICLR 2024 (<strong>Senior Area Chair</strong>), 第十九届中国图象图形学学会青年科学家会议（<strong>General Co-Chair）</strong>，NeurIPS 
@@ -2434,7 +2434,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on Aug. 5, 2025. Number of visitors since March 1, 2010:     
+was last updated on Aug. 7, 2025. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
