--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   <tbody>
   <tr>
     <td width="442" height="91" align="left">
-      <p class="WordSection1">1. I was invited to <strong>Area Chair</strong> of AAAI 2026 and <strong>Senior Area Chair</strong> of ICLR 2026! I am elected to <strong>ICML Board of Directors</strong> (term 2025-2028)! Ten papers accepted to NeurIPS 2025! </p></td>
+      <p class="WordSection1">1. I was invited to <strong>Area Chair</strong> of AAAI 2026 and <strong>Senior Area Chair</strong> of ICLR 2026! I am elected to <strong>ICML Board of Directors</strong> (term 2025-2028)! Ten papers accepted to NeurIPS 2025! I was invited to <strong>Associate Editor in Chief of IEEE TPAMI</strong>! </p></td>
     <td width="180" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="181" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="172" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -2017,63 +2017,66 @@ granted)</p>
 <p>36. (202410162884.4) 基于微分不变量的仿射等变网络模型的图像分类方法</p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Software Copyright:</u></b></strong></p>
 <p>1. (2023SR1724520) 基于Adan优化器的深度模型训练软件 </p>
+<p>2. (2025SR1809734) 深度网络训练梯度空间重用软件</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US">Academic 
   Activities:   
   <o:p></o:p>
 </span></u></b></p>
-<p>1. ICML Board of Directors (2025-2028). </p>
-<p>2. Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), grade 
+<p>1. Associate Editor in Chief of IEEE Trans. Pattern Analysis and Machine Intelligence (2025.09-). </p>
+<p>2. ICML Board of Directors (2025-2028). </p>
+<p>3. Fellow of Asia-Pacific Artificial Intelligence Association (AAIA), grade 
   2023. </p>
-<p>3. Fellow of China Society of Image and Graphics (CSIG), grade 
+<p>4. Fellow of China Society of Image and Graphics (CSIG), grade 
 2021. </p>
-<p>4. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
+<p>5. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
   2018. </p>
-<p>5. Fellow of 
+<p>6. Fellow of 
 International Association of Pattern Recognition (IAPR), grade 2017. </p>
-<p>6. Advisory editor of Advances in Computer Vision and Pattern Recognition. </p>
-<p>7. Associate  Editor of IEEE Trans. Pattern Analysis and Machine Intelligence (2014-2019).</p>
-<p><span lang="EN-US">8. 
+<p>7. Advisory editor of Advances in Computer Vision and Pattern Recognition. </p>
+<p>8. Associate  Editor of IEEE Trans. Pattern Analysis and Machine Intelligence (2014-2019).</p>
+<p><span lang="EN-US">9. 
 </span>Associate  Editor of International Journal of Computer Vision (2012-).</p>
-<p>9. Associate Editor of Optimization Methods and Software (2020-).</p>
-<p>10. Associate Editor of 自动化学报（2024-）.</p>
-<p>11. Executive Editor of Big Data and Information Analytics (2016-).</p>
-<p>12. Associate  
+<p>10. Associate Editor of Optimization Methods and Software (2020-).</p>
+<p>11. Associate Editor of 自动化学报（2024-）.</p>
+<p>12. Executive Editor of Big Data and Information Analytics (2016-).</p>
+<p>13. Associate  
 Editor of Neurocomputing (2012-2014).     
     <o:p></o:p></p>
-<p>13. Ex-Chairman 
+<p>14. Ex-Chairman 
 of Machine Vision Professional Committee, China Society of Images and 
 Graphics (evaluated &quot;excellent&quot; in 2018, 2019,  2021,  2022, and 2023).</p>
-<p>14. 
+<p>15. 
 Vice-Chairman of Pattern Recognition and Machine Intelligence Professional 
 Committee, China Association of Automation.</p>
-<p>15. Standing 
-Member of Computer Vision Professional Committee, China Computer Federation.</p>
 <p>16. Standing 
+Member of Computer Vision Professional Committee, China Computer Federation.</p>
+<p>17. Standing 
 Member of Pattern Recognition Professional Committee, China Association of Artificial Intelligence. </p>
-<p><span lang="EN-US">17. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
-<p>18. Chair Professor of Fuzhou University (2025-). </p>
-<p>19. Adjunct 
+<p><span lang="EN-US">18. </span>Ex-Vice President of Samsung Research, leading the AI Lab at Samsung Research China - Beijing. </p>
+<p>19. Chair Professor of Fuzhou University (2025-). </p>
+<p>20. Adjunct 
   Professor of Chinese University of Hong Kong (Shenzhen).</p>
-<p>20. Ex-Chair  
+<p>21. Ex-Chair  
   Professor of Northeast Normal University.     
     <o:p></o:p> </p>
-<p>21. Ex-Guest
+<p>22. Ex-Guest
  Professor of Shanghai Jiaotong University.   
     <o:p></o:p></p>
-<p>22. Ex-Guest
+<p>23. Ex-Guest
  Researcher of Institute of Computing Technologies, Chinese Academy of Sciences. 
     <o:p></o:p></p>
-<p>23. Ex-Guest
+<p>24. Ex-Guest
  Professor of Southeast University.   
     <o:p></o:p></p>
-<p>24. Ex-Guest
+<p>25. Ex-Guest
  Professor and Ph.D. Supervisor of Beijing Jiaotong University.   
     <o:p></o:p></p>
-<p>25. Reviewer/Editor 
+<p>26. Reviewer/Editor 
   to Journals:    
     <o:p></o:p>
 </p>
-<p><span lang="EN-US">Acta Automatica Sinica (<strong>Associate Editor</strong>),  Optimization Methods and Software (<strong>Associate Editor</strong>), Mathematical Programming, IEEE Trans.
+<p><span lang="EN-US">IEEE Trans.
+  Pattern Analysis and Machine Intelligence (<strong>Associate Editor in Chief</strong>), Acta Automatica Sinica (<strong>Associate Editor</strong>),  Optimization Methods and Software (<strong>Associate Editor</strong>), Mathematical Programming, IEEE Trans.
   Pattern Analysis and Machine Intelligence (<strong>Retired Associate Editor</strong>), International Journal of Computer
   Vision (<strong>Associate Editor</strong>), IEEE Trans. Information Theory, IEEE Journal of Selected Topics in 
   Signal Processing (<strong>Guest Editor</strong>), J. Machine Learning Research, 
@@ -2088,7 +2091,7 @@ Member of Pattern Recognition Professional Committee, China Association of Artif
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p>26. 
+<p>27. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></p>
 <p>ICLR 2026 (<strong>Senior Area Chair</strong>), AAAI 2026 (<strong>Area Chair</strong>), NeurIPS 
@@ -2134,7 +2137,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Recognition 2004, Eurographics 2002, Asian Conf. Computer Vision 2002, Int’l
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></p>
-<p>27. 
+<p>28. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
 <o:p></o:p></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Awards:</u></b></strong></p>
@@ -2444,7 +2447,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on Sept. 20, 2025. Number of visitors since March 1, 2010:     
+was last updated on Sept. 22, 2025. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
