--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,8 @@ No. 1, pp. 119-127, 1998.</span>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">200. 1 paper submitted to KDD 2026. <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">16 papers submitted to ICLR 2026. 1 paper submitted to ACL 2025 October.</span> 3 papers submitted to ACM TheWebConf 2026. 1 paper submitted to WWW 2026.</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">199. Junkang Liu, Fanhua Shang, Kewen Zhu, Yuxuan Tian, Hongying Liu, Yuanyuan Liu, Jin Liu, and <u>Zhouchen Lin</u>, FedAdamW: A Communication-Efficient Optimizer with Convergence and Generalization Guarantees for Federated Large Models, AAAI 2026.</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">198. Chunyuan Zheng, Anpeng Wu, Chuan Zhou, Taojun Hu, Qingying Chen, Hongyi Liu, Chenxi Li, Huiyou Jiang, Haoxuan Li, and <u>Zhouchen Lin</u>, Uplift Modeling with Delayed Feedback: Identifiability and Algorithms, AAAI 2026.</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">199. Junkang Liu, Fanhua Shang, Kewen Zhu, Yuxuan Tian, Hongying Liu, Yuanyuan Liu, Jin Liu, and <u>Zhouchen Lin</u>, <em>FedAdamW: A Communication-Efficient Optimizer with Convergence and Generalization Guarantees for Federated Large Models</em>, AAAI 2026.</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">198. Chunyuan Zheng, Anpeng Wu, Chuan Zhou, Taojun Hu, Qingying Chen, Hongyi Liu, Chenxi Li, Huiyou Jiang, Haoxuan Li, and <u>Zhouchen Lin</u>, <em>Uplift Modeling with Delayed Feedback: Identifiability and Algorithms</em>, AAAI 2026.</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">197. Hao Wang, Licheng Pan, Zhichao Chen, Xu Chen, Qingyang Dai, Lei Wang, Haoxuan Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*</span>, <em>Time-o1: Time-Series Forecasting Needs Transformed Label Alignment</em><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">NeurIPS 2025.</span></span> [<a href="Publications/2025-NeurIPS-Time.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">196. Hao Wang, zhengnan li, Zhichao Chen, Xu Chen, Shuting He, Guangyi Liu, Haoxuan Li, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*</span>, <em>Inverse Methods for Missing Data Imputation</em><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">NeurIPS 2025.</span></span> [<a href="Publications/2025-NeurIPS-Imputation.pdf">pdf</a>] </p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">195. Yikang Li, Yeqing Qiu, Yuxuan Chen, Lingshen He, Lexiang Hu, and <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><u>Zhouchen Lin</u></span>*</span>, <em>Projective Equivariant Networks via Second-order Fundamental Differential Invariants</em><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">, <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">NeurIPS 2025.</span></span> (<strong>Spotlight</strong>) [<a href="Publications/2025-NeurIPS-Projective.pdf">pdf</a>] </p>
@@ -2156,25 +2156,26 @@ Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <str
 <p>2. 朱松纯、林宙辰、李文新、孙飞宇、贾方健、罗定生、马修军、宋国杰、董乐、于亚丽、郑卿，通用人工智能人才培养体系的构建与实践——基于“通识_通智_通用”教学理念的探索，北京大学教学成果一等奖。</p>
 <p>3. 张笑钦、林宙辰、陈慧灵、沈春华，高维多目标优化的度量学习与高效算法研究，2025年度教育部科学技术奖自然科学二等奖。</p>
 <p>4. 林宙辰、王奕森、方聪、吴建龙、刘光灿、李欢、杨一博，资源受限下的机器学习理论与方法，第二届“祖冲之奖”——人工智能前沿创新奖突出成果奖。</p>
-<p>5. 刘宏、刘梦源、李夏、徐勇、林宙辰、田春伟、丁润伟、李广朋、戴林蕙，多元视觉特征交互学习机制，2024年度广东省科学技术奖自然科学一等奖。</p>
-<p>6. 林宙辰、王奕森、吴建龙、夏树涛，非完备情况下的表示学习理论与方法，2024年度中国自动化学会科学技术奖自然科学一等奖。[Zhouchen Lin, Yisen Wang, Jianlong Wu, Shutao Xia, <strong>First Prize</strong> of the CAA Natural Science Award (2024), by the work &quot;Theories and Methods of Representation Learning under Incomplete Conditions&quot;.]</p>
-<p>7. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, <strong>First prize</strong> of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
-<p>8. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
-<p>9. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。[Risheng Liu, Miao Zhang, Zhouchen Lin, Xin Fan, Zhongxuan Luo, <strong>Second prize</strong> of the CSIG Natural Science Award (2023), by the work &quot;Theory and Method of Multi-domain Coordinated Visiual Computing for All-time Complex Environment Perception&quot;.]</p>
-<p>10. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。[Hong Liu, Mengyuan Liu, Xia Li, Zhouchen Lin, Runwei Ding, <strong>First prize</strong> of Shenzhen Natural Science Award (2023), by the work &quot;A Robot Vision Universal Feature Learning Mechanism Based on Multi-Trusted Architecture&quot;.] </p>
-<p>11. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
-<p>12. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
-<p>13. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, <strong>First prize</strong> of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
-<p>14. Distinguished Speaker of CCF (2020). </p>
-<p>15. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
+<p>5. 北京大学2025年度嘉里集团郭氏基金树人奖教金。</p>
+<p>6. 刘宏、刘梦源、李夏、徐勇、林宙辰、田春伟、丁润伟、李广朋、戴林蕙，多元视觉特征交互学习机制，2024年度广东省科学技术奖自然科学一等奖。</p>
+<p>7. 林宙辰、王奕森、吴建龙、夏树涛，非完备情况下的表示学习理论与方法，2024年度中国自动化学会科学技术奖自然科学一等奖。[Zhouchen Lin, Yisen Wang, Jianlong Wu, Shutao Xia, <strong>First Prize</strong> of the CAA Natural Science Award (2024), by the work &quot;Theories and Methods of Representation Learning under Incomplete Conditions&quot;.]</p>
+<p>8. 林宙辰、方聪、李欢、刘宏、杨一博，深度学习网络设计与优化算法，2023年度中国人工智能学会吴文俊科学技术奖自然科学一等奖。[Zhouchen Lin, Cong Fang, Huan Li, Hong Liu,Yibo Yang, <strong>First prize</strong> of the CAAI Natural Science Award (2023), by the work &quot;Network Design and Training Algorithms for Deep Learning&quot;.]</p>
+<p>9. 北京大学2023年度中国工商银行奖教金优秀教师奖。[Peking University ICBC Excellent Teacher Award (2023). ] </p>
+<p>10. 刘日升、张淼、林宙辰、樊鑫、罗钟铉，全时复杂环境感知的多域协同视觉计算理论与方法，中国图象图形学学会科学技术奖自然科学二等奖，2023年。[Risheng Liu, Miao Zhang, Zhouchen Lin, Xin Fan, Zhongxuan Luo, <strong>Second prize</strong> of the CSIG Natural Science Award (2023), by the work &quot;Theory and Method of Multi-domain Coordinated Visiual Computing for All-time Complex Environment Perception&quot;.]</p>
+<p>11. 刘宏、刘梦源、李夏、林宙辰、丁润伟，基于多元可信架构的机器人视觉通用特征学习机制，深圳市科学技术奖自然科学一等奖，2023年。[Hong Liu, Mengyuan Liu, Xia Li, Zhouchen Lin, Runwei Ding, <strong>First prize</strong> of Shenzhen Natural Science Award (2023), by the work &quot;A Robot Vision Universal Feature Learning Mechanism Based on Multi-Trusted Architecture&quot;.] </p>
+<p>12. 22nd Peking University Young Teacher Basic Teaching Skill Competition Excellent Advisor Award (2023). </p>
+<p>13. The First PolyU Graduate School Outstanding Research Postgraduate Alumni Award (2022).</p>
+<p>14. 林宙辰、刘光灿、尹明、俞勇，高维复杂数据的低秩模型理论与方法，2020年度中国计算机学会科学技术奖自然科学一等奖。[Zhouchen Lin, Guangcan Liu, Ming Yin, and Yong Yu, <strong>First prize</strong> of the CCF Natural Science Award (2020), by the work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot;.]</p>
+<p>15. Distinguished Speaker of CCF (2020). </p>
+<p>16. Excellent Ph.D. Supervisor, awarded by Beijing  Society of Image and 
   Graphics (2018 and 2019). </p>
-<p>16. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
-<p>17.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
-<p>18. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
-<p>19. Okawa Research Grant (2016) </p>
-<p>20. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
+<p>17. Innovation Award of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2019).</p>
+<p>18.  Third place of MS COCO and Mapillary Challenge Panoptic Segmentation Task (2018).</p>
+<p>19. The National Science Fund for Distinguished Young Scholars (Year 2016)</p>
+<p>20. Okawa Research Grant (2016) </p>
+<p>21. Champion of <a href="http://image-net.org/challenges/LSVRC/2015/results">ImageNet Large Scale 
 Visual Recognition Challenge (ILSVRC)  Scene Classification Task</a> (2015)</p>
-<p>21. Microsoft SPOT Award (2007)  </p>
+<p>22. Microsoft SPOT Award (2007)  </p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Courses:</u></b></strong></p>
 <p>1. Fundamentals of Data Analysis </p>
 <p>2. Manifold Learning and Sparse Representation</p>
