--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ recruiting  Ph.D.s who <b style="mso-bidi-font-weight: normal;"><u>have
 strong mathematical abilities</u></b> (however, this does not imply that you  
 have to come from mathematics department) and <u><strong>great interest in 
 theoretical analysis</strong></u> in order to enjoy with me how 
-to use  mathematics to solve real problems elegantly. Reference books (downloadable from Library Genesis, whose available link is at: <a href="https://getzlib.com/en">https://getzlib.com/en</a>): </p>
+to use  mathematics to solve real problems elegantly. Reference books (downloadable from Library Genesis, whose available link is at: <a href="https://libgen.bz">https://libgen.bz</a>): </p>
 <p>1. Amir Beck, First-order Methods in Optimization, SIAM, 2017.</p>
 <p>2. Ulisses Braga-Neto, Fundamentals of Pattern 
   Recognition and Machine Learning, Springer, 2020.</p>
@@ -356,7 +356,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   <tbody>
   <tr>
     <td width="442" height="91" align="left">
-      <p class="WordSection1">1. I was invited to <strong>Area Chair</strong> of AAAI 2026 and <strong>Senior Area Chair</strong> of ICLR 2026 and ICML 2026! I am elected to <strong>ICML Board of Directors</strong> (term 2025-2028)! Ten papers accepted to NeurIPS 2025! I was invited to <strong>Associate Editor in Chief of IEEE TPAMI</strong>! </p></td>
+      <p class="WordSection1">1. I was elected to <strong>Fellow of CCF</strong>! I was invited to <strong>Area Chair</strong> of AAAI 2026 and <strong>Senior Area Chair</strong> of ICLR 2026 and ICML 2026! I am elected to <strong>ICML Board of Directors</strong> (term 2025-2028)! I was invited to <strong>Associate Editor in Chief of IEEE TPAMI</strong>! </p></td>
     <td width="180" rowspan="3"><div align="center"><img src="./index_files/Opt_Cover.png" width="178" height="247"></div></td>
     <td width="181" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
     <td width="172" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
@@ -2156,7 +2156,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, ICCV 2001, Pacific Graphics 2001 
  <o:p></o:p></p>
 <p>28. 
-Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CCF/CAA/CAAI Distinguished Member
+Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>, <strong>CSIG Fellow, CCF Fellow, AAIA Fellow</strong>, ACM Distinguished Member, AAAI Senior Member (only 5 approved in 2023), CAA/CAAI Distinguished Member
 <o:p></o:p></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u>Awards:</u></b></strong></p>
 <p>1. Inaugural Outstanding Alumni Award of the PolyU Faculty of Computer and Mathematical Sciences (FCMS) 2025.</p>
@@ -2469,7 +2469,7 @@ National University of Singapore (Aug.10, 2012), Hong Kong Baptist University
 <hr width="100%" size="3" align="center">
 </div>
 <p>This website 
-was last updated on Dec. 22, 2025. Number of visitors since March 1, 2010:     
+was last updated on Jan. 11, 2026. Number of visitors since March 1, 2010:     
     <o:p></o:p></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
